...
    if (await _fileSystem.fileExists(devicePath)) {
      final content = await _fileSystem.readFile(devicePath);
      _currentDevice = DeviceIdentity.fromJson(jsonDecode(content) as Map<String, dynamic>);
    } else {
      final keyPair = await _cryptoService.generateDeviceKeyPair();

      _currentDevice = DeviceIdentity(uuid: _idService.generateId(), name: 'Default Device', createdAt: DateTime.now(), lastHlc: null, publicKey: keyPair.publicKeyBase64Url);
      await _fileSystem.writeFile(devicePath, jsonEncode(_currentDevice!.toJson()));
      await _secureKeyStore.storeDevicePrivateKey(vaultId, keyPair.privateKeyBase64Url);
    }
    return _currentDevice!;
  }

...
